# WARpp

./: .gitignore  CMakeLists.txt  revision_data.h.in.cmake
cmake/: options.cmake  showoptions.cmake
contrib/Launcher/: start.bat
dep/: CMakeLists.txt
sql/base/: auth_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Configuration/: BuiltInConfig.h  Config.cpp  Config.h
src/common/Debugging/: Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Logging/: Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogMessage.h  LogOperation.h  Logger.h
src/common/PrecompiledHeaders/: commonpch.h
src/common/Utilities/: ByteConverter.h  MessageBuffer.h  Util.cpp  Util.h
src/loginserver/: Main.cpp
src/loginserver/Server/: Server.cpp  Server.h  Session.cpp  Session.h
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/server/authserver/Server/: AuthServer.cpp  AuthServer.h  LoginHandler.cpp  RealmMgr.cpp  RealmMgr.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: AdhocStatement.h  DatabaseEnv.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.h  DatabaseWorkerPool.cpp  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.h  QueryCallbackProcessor.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.h
src/server/database/Logging/: AppenderDB.cpp  AppenderDB.h
src/server/game/Server/: Packet.h  WorldSocketMgr.h
src/server/shared/: CMakeLists.txt
(+22 files in other folders)
